--- a/notebooks/3_Forecasting_Training.ipynb
+++ b/notebooks/3_Forecasting_Training.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "=== 1. Initialisation Vertex AI ==="
+    "# === 1. Initialisation Vertex AI ==="
    ]
   },
   {
