fixed notebooks and preprocessing

--- a/notebooks/2_Vertex_AI_Forecasting_Training.ipynb
+++ b/notebooks/2_Vertex_AI_Forecasting_Training.ipynb
@@ -255,7 +255,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transformations de colonnes configurées: 11 colonnes\n"
+      "Transformations de colonnes configurées: 11 colonnes\n",
+      "Note: pickup_community_area (identifiant de série) est EXCLU des transformations pour éviter les conflits\n"
      ]
     }
    ],
@@ -264,35 +265,28 @@
     "job_display_name = f\"taxi_demand_forecast_job_{datetime.now().strftime('%Y%m%d_%H%M')}\"\n",
     "\n",
     "# Configuration des transformations de colonnes\n",
-    "column_transformations = vertex_config.get(\"column_transformations\", {})\n",
-    "\n",
-    "# Définition MANUELLE des transformations pour éviter les problèmes avec pickup_community_area\n",
-    "formatted_transformations = []\n",
-    "\n",
-    "# Si les transformations sont définies dans la configuration, les utiliser\n",
-    "if column_transformations:\n",
-    "    # Conversion du format dict en format attendu par l'API\n",
-    "    for col, transform_type in column_transformations.items():\n",
-    "        # Ne pas ajouter de transformation pour context_column (pickup_community_area)\n",
-    "        if col != context_column:\n",
-    "            formatted_transformations.append({transform_type: {\"column_name\": col}})\n",
-    "else:\n",
-    "    # Transformations automatiques pour les colonnes autres que context_column\n",
-    "    formatted_transformations.append({\"auto\": {\"column_name\": target_column}})\n",
-    "    formatted_transformations.append({\"auto\": {\"column_name\": time_column}})\n",
+    "# Définir explicitement les transformations pour chaque colonne sauf pickup_community_area\n",
+    "formatted_transformations = [\n",
+    "    {\"timestamp\": {\"column_name\": time_column}},  # La colonne timestamp\n",
+    "    {\"numeric\": {\"column_name\": target_column}},   # La colonne cible\n",
     "    \n",
-    "    # Ajouter les colonnes disponibles à l'heure de la prévision (sauf context_column)\n",
-    "    for col in available_at_forecast:\n",
-    "        if col not in [target_column, time_column, context_column]:\n",
-    "            formatted_transformations.append({\"auto\": {\"column_name\": col}})\n",
+    "    # Features supplémentaires disponibles à l'heure de prévision\n",
+    "    {\"numeric\": {\"column_name\": \"day_of_year\"}},\n",
+    "    {\"numeric\": {\"column_name\": \"day_of_week\"}},\n",
+    "    {\"numeric\": {\"column_name\": \"hour\"}},\n",
+    "    {\"numeric\": {\"column_name\": \"month\"}},\n",
+    "    {\"categorical\": {\"column_name\": \"is_weekend\"}}\n",
+    "]\n",
+    "\n",
+    "\n",
     "\n",
     "print(f\"Transformations de colonnes configurées: {len(formatted_transformations)} colonnes\")\n",
-    "print(f\"Note: {context_column} est EXCLU des transformations pour éviter les conflits\")"
+    "print(f\"Note: {context_column} (identifiant de série) est EXCLU des transformations pour éviter les conflits\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "7d356e90",
    "metadata": {},
    "outputs": [
@@ -300,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Job d'entraînement configuré: taxi_demand_forecast_job_20250409_1736\n"
+      "✅ Job d'entraînement configuré: taxi_demand_forecast_job_20250409_1801\n"
      ]
     }
    ],
@@ -317,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9344df5d",
    "metadata": {},
    "outputs": [
@@ -325,9 +319,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrait de pickup_community_area des colonnes disponibles pour la prévision\n",
       "⏳ Démarrage de l'entraînement du modèle... Cela peut prendre plusieurs heures.\n",
-      "❌ Erreur lors de l'entraînement du modèle: 400 The columns 'pickup_community_area' have transformation but do not have any time dependency properties (time series attribute, unavailable at forecast, available at forecast).\n"
+      "View Training:\n",
+      "https://console.cloud.google.com/ai/platform/locations/europe-west1/training/8304171588660494336?project=807699310940\n",
+      "❌ Erreur lors de l'entraînement du modèle: Training failed with:\n",
+      "code: 3\n",
+      "message: \"Column(is_holiday) doesn\\'t exist, please remove it from transformations.\"\n",
+      "\n",
+      "\n",
+      "Détails complets de l'erreur pour analyse:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/yz/8n0rd9yn0hz34drfl1h86v300000gn/T/ipykernel_53686/1537265053.py\", line 16, in <module>\n",
+      "    model = training_job.run(\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/training_jobs.py\", line 2204, in run\n",
+      "    return self._run(\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/base.py\", line 863, in wrapper\n",
+      "    return method(*args, **kwargs)\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/training_jobs.py\", line 2658, in _run\n",
+      "    new_model = self._run_job(\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/training_jobs.py\", line 854, in _run_job\n",
+      "    model = self._get_model(block=block)\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/training_jobs.py\", line 941, in _get_model\n",
+      "    self._block_until_complete()\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/training_jobs.py\", line 984, in _block_until_complete\n",
+      "    self._raise_failure()\n",
+      "  File \"/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/aiplatform/training_jobs.py\", line 1001, in _raise_failure\n",
+      "    raise RuntimeError(\"Training failed with:\\n%s\" % self._gca_resource.error)\n",
+      "RuntimeError: Training failed with:\n",
+      "code: 3\n",
+      "message: \"Column(is_holiday) doesn\\'t exist, please remove it from transformations.\"\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -336,13 +358,13 @@
     "model_display_name = f\"{vertex_config['display_name']}_{datetime.now().strftime('%Y%m%d_%H%M')}\"\n",
     "\n",
     "# S'assurer que context_column n'est PAS dans available_at_forecast ni unavailable_at_forecast\n",
-    "if context_column in available_at_forecast:\n",
-    "    available_at_forecast.remove(context_column)\n",
-    "    print(f\"Retrait de {context_column} des colonnes disponibles pour la prévision\")\n",
+    "available_at_forecast_cleaned = [col for col in available_at_forecast if col != context_column]\n",
+    "unavailable_at_forecast_cleaned = [col for col in unavailable_at_forecast if col != context_column]\n",
     "\n",
-    "if context_column in unavailable_at_forecast:\n",
-    "    unavailable_at_forecast.remove(context_column)\n",
-    "    print(f\"Retrait de {context_column} des colonnes indisponibles pour la prévision\")\n",
+    "# Informer l'utilisateur des modifications\n",
+    "if context_column in available_at_forecast or context_column in unavailable_at_forecast:\n",
+    "    print(f\"ℹ️ Note: {context_column} a été retiré des listes de colonnes car c'est l'identifiant de série temporelle.\")\n",
+    "    print(f\"L'identifiant de série ne doit pas apparaître dans les listes des colonnes disponibles ou indisponibles.\")\n",
     "\n",
     "# Lancement de l'entraînement\n",
     "print(f\"⏳ Démarrage de l'entraînement du modèle... Cela peut prendre plusieurs heures.\")\n",
@@ -352,8 +374,11 @@
     "        target_column=target_column,\n",
     "        time_column=time_column,\n",
     "        time_series_identifier_column=context_column,\n",
-    "        unavailable_at_forecast_columns=unavailable_at_forecast,\n",
-    "        available_at_forecast_columns=available_at_forecast,\n",
+    "        # Utiliser les listes nettoyées sans l'identifiant de série\n",
+    "        unavailable_at_forecast_columns=unavailable_at_forecast_cleaned,\n",
+    "        available_at_forecast_columns=available_at_forecast_cleaned,\n",
+    "        # L'identifiant de série n'a pas besoin d'être spécifié comme attribut de série\n",
+    "        time_series_attribute_columns=[],\n",
     "        forecast_horizon=forecast_horizon,\n",
     "        context_window=window_size,\n",
     "        data_granularity_unit=forecast_config.get(\"data_granularity_unit\", \"hour\"),\n",
