--- a/notebooks/3_Batch_Prediction_Visualization.ipynb
+++ b/notebooks/3_Batch_Prediction_Visualization.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e5d45c20",
    "metadata": {},
    "outputs": [],
@@ -72,11 +72,27 @@
    "execution_count": null,
    "id": "409bb277",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Environnement initialisé avec succès pour le projet avisia-certification-ml-yde\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuration du projet GCP\n",
     "PROJECT_ID = \"avisia-certification-ml-yde\"  # Remplacez par votre Project ID\n",
-    "REGION = \"us-central1\"  # Région pour Vertex AI\n",
+    "REGION = \"europe-west1\"\n",
     "BUCKET_URI = f\"gs://{PROJECT_ID}-vertex-bucket\"  # URI du bucket GCS\n",
     "BQ_DATASET = \"chicago_taxis\"\n",
     "\n",
@@ -105,10 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b54025c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Configuration chargée avec succès.\n",
+      "Horizon de prévision configuré: 24 heures\n"
+     ]
+    }
+   ],
    "source": [
     "# Chargement du fichier de configuration\n",
     "try:\n",
@@ -156,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ab57d176",
    "metadata": {},
    "outputs": [],
@@ -231,10 +256,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ca45009b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Génération des données d'entrée pour la prédiction...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/bigquery/table.py:1933: UserWarning: BigQuery Storage module not found, fetch data with the REST endpoint instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Données générées: 1848 lignes, 8 colonnes\n",
+      "\n",
+      "Aperçu des données d'entrée:\n",
+      "\n",
+      "Export des données vers BigQuery...\n",
+      "✅ Données exportées vers la table: avisia-certification-ml-yde.chicago_taxis.forecast_input\n"
+     ]
+    }
+   ],
    "source": [
     "# Génération des données d'entrée pour la prédiction\n",
     "print(\"Génération des données d'entrée pour la prédiction...\")\n",
@@ -266,38 +319,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "34bd8bd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recherche du modèle le plus récent avec le préfixe: 'chicago_taxi_forecast_model'\n",
+      "Modèles trouvés: []\n",
+      "❌ Erreur lors du chargement du modèle: Aucun modèle trouvé avec le préfixe 'chicago_taxi_forecast_model'. Vérifiez le nom dans config/pipeline_config.yaml et si la pipeline d'entraînement a bien enregistré un modèle.\n"
+     ]
+    }
+   ],
    "source": [
     "# Récupération du modèle le plus récent\n",
-    "model_name = vertex_config.get(\"display_name\", \"chicago_taxi_forecast_model\")\n",
+    "# Utiliser le préfixe défini dans la configuration pour la recherche\n",
+    "model_prefix = config.get(\"model_registry\", {}).get(\"model_display_name_prefix\", \"chicago_taxi_forecast_model\")\n",
+    "print(f\"Recherche du modèle le plus récent avec le préfixe: '{model_prefix}'\")\n",
     "\n",
     "try:\n",
-    "    # Rechercher les modèles correspondant au nom d'affichage\n",
-    "    models = aiplatform.Model.list(\n",
-    "        filter=f'display_name=\"{model_name}\"',\n",
-    "        order_by=\"create_time desc\"\n",
-    "    )\n",
+    "    # Rechercher les modèles dont le nom commence par le préfixe\n",
+    "    # Note: L'API ne supporte pas directement 'LIKE' ou 'STARTS_WITH' dans le filtre standard.\n",
+    "    # On liste donc tous les modèles (ou un sous-ensemble si possible) et on filtre côté client,\n",
+    "    # ou on utilise un nom exact si la pipeline l'enregistre de manière prédictible.\n",
+    "    # Alternative: Utiliser un nom exact si connu ou le récupérer depuis la sortie de la pipeline HPT.\n",
+    "\n",
+    "    # Stratégie 1: Lister avec un filtre plus large et trier/filtrer ensuite (peut être lent si bcp de modèles)\n",
+    "    # models = aiplatform.Model.list(order_by=\"create_time desc\")\n",
+    "    # matching_models = [m for m in models if m.display_name.startswith(model_prefix)]\n",
+    "\n",
+    "    # Stratégie 2: Essayer de récupérer le modèle via une sortie de pipeline (plus robuste si disponible)\n",
+    "    # Si l'URI du modèle est passé d'une étape précédente (ex: sortie de HPT job), l'utiliser directement:\n",
+    "    # model_resource_name = \"URI_OU_NOM_COMPLET_DU_MODELE_DE_LA_PIPELINE\"\n",
+    "    # model = aiplatform.Model(model_name=model_resource_name)\n",
+    "    # print(f\"✅ Modèle chargé directement via resource name: {model.display_name}\")\n",
+    "\n",
+    "    # Stratégie 3: Utiliser list avec un nom exact si la convention de nommage est fixe.\n",
+    "    # Supposons que le dernier modèle HPT enregistré ait un nom prédictible ou soit taggué 'latest'.\n",
+    "    # Pour cet exemple, on va chercher les modèles commençant par le préfixe et prendre le plus récent.\n",
     "    \n",
+    "    all_models = aiplatform.Model.list(order_by=\"create_time desc\")\n",
+    "    print(f\"Modèles trouvés: {all_models}\")\n",
+    "    models = [m for m in all_models if m.display_name.startswith(model_prefix)]\n",
+    "\n",
     "    if models:\n",
-    "        model = models[0]  # Prendre le plus récent\n",
-    "        print(f\"✅ Modèle chargé: {model.display_name} (créé le {model.create_time})\")\n",
+    "        model = models[0]  # Prendre le plus récent correspondant au préfixe\n",
+    "        print(f\"✅ Modèle trouvé: {model.display_name} (Resource Name: {model.resource_name}, créé le {model.create_time})\")\n",
+    "        # Stocker le nom de ressource pour le job batch (plus fiable que display_name)\n",
+    "        model_resource_name = model.resource_name\n",
     "    else:\n",
-    "        # Si aucun modèle exact n'est trouvé, rechercher avec un filtre moins restrictif\n",
-    "        models = aiplatform.Model.list(\n",
-    "            filter=f'display_name LIKE \"{model_name}%\"',\n",
-    "            order_by=\"create_time desc\"\n",
-    "        )\n",
-    "        \n",
-    "        if models:\n",
-    "            model = models[0]  # Prendre le plus récent\n",
-    "            print(f\"✅ Modèle similaire trouvé: {model.display_name} (créé le {model.create_time})\")\n",
-    "        else:\n",
-    "            raise ValueError(f\"Aucun modèle trouvé avec le nom '{model_name}'\")\n",
+    "        # Si aucun modèle n'est trouvé avec le préfixe\n",
+    "        raise ValueError(f\"Aucun modèle trouvé avec le préfixe '{model_prefix}'. Vérifiez le nom dans config/pipeline_config.yaml et si la pipeline d'entraînement a bien enregistré un modèle.\")\n",
+    "\n",
     "except Exception as e:\n",
-    "    print(f\"❌ Erreur lors du chargement du modèle: {e}\")"
+    "    print(f\"❌ Erreur lors du chargement du modèle: {e}\")\n",
+    "    # Réinitialiser la variable modèle en cas d'erreur\n",
+    "    model = None\n",
+    "    model_resource_name = None"
    ]
   },
   {
@@ -312,10 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a18ee272",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⏳ Lancement du job de prédiction batch...\n",
+      "❌ Erreur lors de la prédiction batch: name 'model' is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "# Nom du job de prédiction batch\n",
     "batch_job_name = f\"batch_pred_taxi_demand_{datetime.now().strftime('%Y%m%d_%H%M')}\"\n",
@@ -350,10 +439,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "37a09adc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Erreur lors de la récupération des prédictions: 400 Invalid project ID 'avisia-certification-ml-yde.chicago_taxis'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.; reason: invalid, location: avisia-certification-ml-yde.chicago_taxis.forecast_output.predictions, message: Invalid project ID 'avisia-certification-ml-yde.chicago_taxis'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.\n",
+      "\n",
+      "Location: US\n",
+      "Job ID: 4819e221-0cdf-470c-b316-524c2c09218d\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Requête pour récupérer les prédictions\n",
     "query = f\"\"\"\n",
@@ -401,10 +502,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4e480aa1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ Erreur lors de la visualisation des prévisions: name 'df_pred' is not defined\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gustavevernay/Desktop/Projets/Pro/Avisia/chicago-taxi-genai-demo/venv/lib/python3.10/site-packages/google/cloud/bigquery/table.py:1933: UserWarning: BigQuery Storage module not found, fetch data with the REST endpoint instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Identifier les zones les plus actives\n",
     "top_zones_query = f\"\"\"\n",
@@ -476,10 +593,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fd75031d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ Erreur lors de l'analyse des patterns horaires: name 'df_pred' is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "# Analyse par heure de la journée\n",
     "try:\n",
@@ -534,10 +659,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "bbf8273d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ Erreur lors de l'analyse spatiale: name 'df_pred' is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "# Agrégation par zone\n",
     "try:\n",
@@ -586,10 +719,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a45a3373",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ Erreur lors de la comparaison weekend vs. semaine: name 'df_pred' is not defined\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    # Agrégation par heure et weekend/semaine\n",
@@ -666,8 +807,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
