fixed batch prediction

--- a/notebooks/3_Batch_Prediction_Visualization.ipynb
+++ b/notebooks/3_Batch_Prediction_Visualization.ipynb
@@ -93,15 +93,14 @@
     "# Configuration du projet GCP\n",
     "PROJECT_ID = \"avisia-certification-ml-yde\"  # Remplacez par votre Project ID\n",
     "REGION = \"europe-west1\"\n",
-    "BUCKET_URI = f\"gs://{PROJECT_ID}-vertex-bucket\"  # URI du bucket GCS\n",
     "BQ_DATASET = \"chicago_taxis\"\n",
     "\n",
     "# Tables BigQuery pour l'entrée et la sortie des prédictions\n",
     "BQ_INPUT = f\"bq://{PROJECT_ID}.{BQ_DATASET}.forecast_input\"   # table contenant les timestamps futurs\n",
-    "BQ_OUTPUT = f\"bq://{PROJECT_ID}.{BQ_DATASET}.forecast_output\"  # table où seront stockées les prédictions\n",
+    "BQ_OUTPUT = f\"bq://{PROJECT_ID}.{BQ_DATASET}\"  # table où seront stockées les prédictions\n",
     "\n",
     "# Initialisation de Vertex AI\n",
-    "aiplatform.init(project=PROJECT_ID, location=REGION, staging_bucket=BUCKET_URI)\n",
+    "aiplatform.init(project=PROJECT_ID, location=REGION)\n",
     "\n",
     "# Initialisation du client BigQuery\n",
     "client = bigquery.Client(project=PROJECT_ID)\n",
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "34bd8bd2",
    "metadata": {},
    "outputs": [
@@ -328,8 +327,7 @@
      "output_type": "stream",
      "text": [
       "Recherche du modèle le plus récent avec le préfixe: 'chicago_taxi_forecast_model'\n",
-      "Modèles trouvés: []\n",
-      "❌ Erreur lors du chargement du modèle: Aucun modèle trouvé avec le préfixe 'chicago_taxi_forecast_model'. Vérifiez le nom dans config/pipeline_config.yaml et si la pipeline d'entraînement a bien enregistré un modèle.\n"
+      "✅ Modèle trouvé: chicago_taxi_forecast_model_20250415_1127 (Resource Name: projects/807699310940/locations/europe-west1/models/988694049835712512, créé le 2025-04-15 09:27:35.570357+00:00)\n"
      ]
     }
    ],
@@ -361,7 +359,6 @@
     "    # Pour cet exemple, on va chercher les modèles commençant par le préfixe et prendre le plus récent.\n",
     "    \n",
     "    all_models = aiplatform.Model.list(order_by=\"create_time desc\")\n",
-    "    print(f\"Modèles trouvés: {all_models}\")\n",
     "    models = [m for m in all_models if m.display_name.startswith(model_prefix)]\n",
     "\n",
     "    if models:\n",
@@ -392,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "a18ee272",
    "metadata": {},
    "outputs": [
@@ -401,7 +398,8 @@
      "output_type": "stream",
      "text": [
       "⏳ Lancement du job de prédiction batch...\n",
-      "❌ Erreur lors de la prédiction batch: name 'model' is not defined\n"
+      "Creating BatchPredictionJob\n",
+      "❌ Erreur lors de la prédiction batch: 400 Table name is not allowed in Bigquery output uri.\n"
      ]
     }
    ],
