visualize batch prediction

--- a/notebooks/3_Batch_Prediction_Visualization.ipynb
+++ b/notebooks/3_Batch_Prediction_Visualization.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "409bb277",
    "metadata": {},
    "outputs": [
@@ -85,6 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✅ Dataset créé ou déjà existant : avisia-certification-ml-yde.chicago_taxis (location=EU)\n",
       "✅ Environnement initialisé avec succès pour le projet avisia-certification-ml-yde\n"
      ]
     }
@@ -94,16 +95,27 @@
     "PROJECT_ID = \"avisia-certification-ml-yde\"  # Remplacez par votre Project ID\n",
     "REGION = \"europe-west1\"\n",
     "BQ_DATASET = \"chicago_taxis\"\n",
+    "LOCATION=\"EU\"\n",
     "\n",
     "# Tables BigQuery pour l'entrée et la sortie des prédictions\n",
     "BQ_INPUT = f\"bq://{PROJECT_ID}.{BQ_DATASET}.forecast_input\"   # table contenant les timestamps futurs\n",
-    "BQ_OUTPUT = f\"bq://{PROJECT_ID}.{BQ_DATASET}\"  # table où seront stockées les prédictions\n",
+    "BQ_OUTPUT = f\"{PROJECT_ID}.{BQ_DATASET}\"  # table où seront stockées les prédictions\n",
     "\n",
     "# Initialisation de Vertex AI\n",
     "aiplatform.init(project=PROJECT_ID, location=REGION)\n",
     "\n",
     "# Initialisation du client BigQuery\n",
     "client = bigquery.Client(project=PROJECT_ID)\n",
+    "# Créer le dataset s'il n'existe pas\n",
+    "dataset_id = f\"{PROJECT_ID}.{BQ_DATASET}\"\n",
+    "dataset = bigquery.Dataset(dataset_id)\n",
+    "dataset.location = LOCATION\n",
+    "\n",
+    "try:\n",
+    "    dataset = client.create_dataset(dataset, exists_ok=True)\n",
+    "    print(f\"✅ Dataset créé ou déjà existant : {dataset_id} (location={LOCATION})\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Erreur lors de la création du dataset : {e}\")\n",
     "\n",
     "print(f\"✅ Environnement initialisé avec succès pour le projet {PROJECT_ID}\")"
    ]
@@ -180,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "id": "ab57d176",
    "metadata": {},
    "outputs": [],
@@ -243,7 +255,17 @@
     "    \n",
     "    # Configuration du job\n",
     "    job_config = bigquery.LoadJobConfig(\n",
-    "        write_disposition=\"WRITE_TRUNCATE\"\n",
+    "        write_disposition=\"WRITE_TRUNCATE\",\n",
+    "          schema=[\n",
+    "            bigquery.SchemaField(\"pickup_community_area\", \"STRING\"),\n",
+    "            bigquery.SchemaField(\"timestamp_hour\", \"TIMESTAMP\"),  # <-- TIMESTAMP ici\n",
+    "            bigquery.SchemaField(\"hour\", \"INTEGER\"),\n",
+    "            bigquery.SchemaField(\"day_of_week\", \"INTEGER\"),\n",
+    "            bigquery.SchemaField(\"month\", \"INTEGER\"),\n",
+    "            bigquery.SchemaField(\"day_of_year\", \"INTEGER\"),\n",
+    "            bigquery.SchemaField(\"is_weekend\", \"INTEGER\"),\n",
+    "            bigquery.SchemaField(\"is_holiday\", \"INTEGER\"),\n",
+    "        ]\n",
     "    )\n",
     "    \n",
     "    # Chargement des données\n",
@@ -255,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "id": "ca45009b",
    "metadata": {},
    "outputs": [
@@ -281,6 +303,19 @@
       "✅ Données générées: 1848 lignes, 8 colonnes\n",
       "\n",
       "Aperçu des données d'entrée:\n",
+      "  pickup_community_area      timestamp_hour  hour  day_of_week  month  \\\n",
+      "0                     1 2025-04-16 12:00:00    12            2      4   \n",
+      "1                     1 2025-04-16 13:00:00    13            2      4   \n",
+      "2                     1 2025-04-16 14:00:00    14            2      4   \n",
+      "3                     1 2025-04-16 15:00:00    15            2      4   \n",
+      "4                     1 2025-04-16 16:00:00    16            2      4   \n",
+      "\n",
+      "   day_of_year  is_weekend  is_holiday  \n",
+      "0          106           0           0  \n",
+      "1          106           0           0  \n",
+      "2          106           0           0  \n",
+      "3          106           0           0  \n",
+      "4          106           0           0  \n",
       "\n",
       "Export des données vers BigQuery...\n",
       "✅ Données exportées vers la table: avisia-certification-ml-yde.chicago_taxis.forecast_input\n"
@@ -291,11 +326,14 @@
     "# Génération des données d'entrée pour la prédiction\n",
     "print(\"Génération des données d'entrée pour la prédiction...\")\n",
     "df_input = generate_forecast_input()\n",
+    "df_input['timestamp_hour'] = pd.to_datetime(df_input['timestamp_hour'])\n",
+    "df_input['pickup_community_area'] = df_input['pickup_community_area'].astype(str)\n",
+    "\n",
     "print(f\"✅ Données générées: {df_input.shape[0]} lignes, {df_input.shape[1]} colonnes\")\n",
     "\n",
     "# Aperçu des données générées\n",
     "print(\"\\nAperçu des données d'entrée:\")\n",
-    "df_input.head()\n",
+    "print(df_input.head(5))\n",
     "\n",
     "# Export vers BigQuery\n",
     "try:\n",
@@ -389,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "id": "a18ee272",
    "metadata": {},
    "outputs": [
@@ -399,7 +437,36 @@
      "text": [
       "⏳ Lancement du job de prédiction batch...\n",
       "Creating BatchPredictionJob\n",
-      "❌ Erreur lors de la prédiction batch: 400 Table name is not allowed in Bigquery output uri.\n"
+      "BatchPredictionJob created. Resource name: projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944\n",
+      "To use this BatchPredictionJob in another session:\n",
+      "bpj = aiplatform.BatchPredictionJob('projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944')\n",
+      "View Batch Prediction Job:\n",
+      "https://console.cloud.google.com/ai/platform/locations/europe-west1/batch-predictions/9173784131161554944?project=807699310940\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "BatchPredictionJob projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944 current state:\n",
+      "JobState.JOB_STATE_SUCCEEDED\n",
+      "BatchPredictionJob run completed. Resource name: projects/807699310940/locations/europe-west1/batchPredictionJobs/9173784131161554944\n",
+      "✅ Prédictions générées avec succès!\n",
+      "Les résultats sont stockés dans: avisia-certification-ml-yde.chicago_taxis\n"
      ]
     }
    ],
@@ -437,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "37a09adc",
    "metadata": {},
    "outputs": [
@@ -445,47 +512,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ Erreur lors de la récupération des prédictions: 400 Invalid project ID 'avisia-certification-ml-yde.chicago_taxis'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.; reason: invalid, location: avisia-certification-ml-yde.chicago_taxis.forecast_output.predictions, message: Invalid project ID 'avisia-certification-ml-yde.chicago_taxis'. Project IDs must contain 6-63 lowercase letters, digits, or dashes. Some project IDs also include domain name separated by a colon. IDs must start with a letter and may not end with a dash.\n",
+      "Tentative de requête avec le client BigQuery par défaut pour la table: avisia-certification-ml-yde.chicago_taxis.predictions_2025_04_16T02_38_20_413Z_934\n",
+      "❌ Erreur lors de la récupération des prédictions: 400 Unrecognized name: instance at [3:7]; reason: invalidQuery, location: query, message: Unrecognized name: instance at [3:7]\n",
       "\n",
-      "Location: US\n",
-      "Job ID: 4819e221-0cdf-470c-b316-524c2c09218d\n",
+      "Location: europe-west1\n",
+      "Job ID: 567fa871-41df-461d-b149-45099cc2acfe\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Requête pour récupérer les prédictions\n",
-    "query = f\"\"\"\n",
-    "SELECT\n",
-    "  instance.pickup_community_area,\n",
-    "  instance.timestamp_hour,\n",
-    "  instance.hour,\n",
-    "  instance.day_of_week,\n",
-    "  instance.is_weekend,\n",
-    "  prediction.value[OFFSET(0)] AS predicted_trip_count\n",
-    "FROM `{PROJECT_ID}.{BQ_DATASET}.forecast_output.predictions`\n",
-    "ORDER BY timestamp_hour, pickup_community_area\n",
-    "\"\"\"\n",
+    "# Récupération et analyse des résultats de prédiction batch\n",
+    "\n",
+    "# Après le batch_predict, récupère le nom de la table de sortie :\n",
+    "output_table_uri = batch_job.output_info.bigquery_output_table  # ex: bq://avisia-certification-ml-yde.chicago_taxis.predictions_2025_04_16T02_38_20_413Z_934\n",
     "\n",
     "try:\n",
-    "    # Exécution de la requête\n",
+    "    # Toujours parser l'URI pour obtenir projet, dataset, table\n",
+    "    if output_table_uri.startswith(\"bq://\"):\n",
+    "        output_table_parts = output_table_uri.replace(\"bq://\", \"\").split(\".\")\n",
+    "        if len(output_table_parts) == 3:\n",
+    "            output_project, output_dataset, output_table = output_table_parts\n",
+    "            output_table_id = f\"{output_project}.{output_dataset}.{output_table}\"\n",
+    "        elif len(output_table_parts) == 1:\n",
+    "            # Cas très rare, on reconstruit avec le dataset par défaut\n",
+    "            output_project = PROJECT_ID\n",
+    "            output_dataset = BQ_DATASET\n",
+    "            output_table = output_table_parts[0]\n",
+    "            output_table_id = f\"{output_project}.{output_dataset}.{output_table}\"\n",
+    "        else:\n",
+    "            raise ValueError(f\"URI de table inattendue : {output_table_uri}\")\n",
+    "    else:\n",
+    "        output_project = PROJECT_ID\n",
+    "        output_dataset = BQ_DATASET\n",
+    "        output_table = output_table_uri\n",
+    "        output_table_id = f\"{output_project}.{output_dataset}.{output_table}\"\n",
+    "\n",
+    "    # Essayer avec le client BigQuery par défaut (initialisé plus haut sans location)\n",
+    "    print(f\"Tentative de requête avec le client BigQuery par défaut pour la table: {output_table_id}\")\n",
+    "    query = f\"\"\"\n",
+    "    SELECT\n",
+    "      pickup_community_area,\n",
+    "      timestamp_hour,\n",
+    "      hour,\n",
+    "      day_of_week,\n",
+    "      is_weekend,\n",
+    "      prediction.value[OFFSET(0)] AS predicted_trip_count\n",
+    "    FROM `{output_table_id}`\n",
+    "    ORDER BY timestamp_hour, pickup_community_area\n",
+    "    \"\"\"\n",
+    "    # Utiliser le client 'client' initialisé au début du notebook\n",
     "    df_pred = client.query(query).to_dataframe()\n",
-    "    \n",
+    "\n",
     "    # Conversion des types\n",
     "    df_pred['timestamp_hour'] = pd.to_datetime(df_pred['timestamp_hour'])\n",
     "    df_pred['predicted_trip_count'] = df_pred['predicted_trip_count'].astype(float)\n",
-    "    \n",
+    "\n",
     "    print(f\"✅ Prédictions récupérées: {df_pred.shape[0]} lignes\")\n",
-    "    \n",
+    "\n",
     "    # Statistiques descriptives\n",
     "    print(\"\\nStatistiques des prédictions:\")\n",
     "    print(df_pred['predicted_trip_count'].describe())\n",
-    "    \n",
+    "\n",
     "    # Aperçu des prédictions\n",
     "    print(\"\\nAperçu des prédictions:\")\n",
-    "    df_pred.head()\n",
+    "    display(df_pred.head())\n",
     "except Exception as e:\n",
-    "    print(f\"❌ Erreur lors de la récupération des prédictions: {e}\")"
+    "    print(f\"❌ Erreur lors de la récupération des prédictions: {e}\")\n",
+    "    # Si l'erreur persiste, il faudra vérifier la localisation réelle du dataset 'chicago_taxis'\n",
+    "    # et potentiellement gérer une requête inter-régions explicitement."
    ]
   },
   {
